--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "moment": "^2.19.2"
+    "moment": "^2.19.2",
+    "rxjs": "^5.5.2"
+  },
+  "devDependencies": {
+    "aws-sdk": "^2.156.0"
   }
 }
