--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "moment": "^2.19.2",
-    "rxjs": "^5.5.2"
+    "rxjs": "^5.5.2",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "aws-sdk": "^2.156.0"
